--- a/install/resources/assets/css/main.css
+++ b/install/resources/assets/css/main.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #2F5151;
+    background-color: #2f5151;
+    padding: 25px;
 }
 
 .head {
@@ -7,9 +8,7 @@ body {
     font-size: 2em;
 }
 
-.title {
-    
-}
+.title {}
 
 .brand {
     float: left;
