Add SSE, AJAX and Loader.

--- a/install/resources/assets/css/main.css
+++ b/install/resources/assets/css/main.css
@@ -23,3 +23,621 @@ body {
 .clearfix {
     clear: both;
 }
+
+.cssload-wrap {
+	text-align: center;
+	line-height: 195px;
+}
+
+.cssload-container {
+	display: inline-block;
+}
+
+.cssload-dots {
+	display: inline-block;
+	position: relative;
+}
+.cssload-dots:not(:last-child) {
+	margin-right: 9px;
+}
+.cssload-dots:before, .cssload-dots:after {
+	content: "";
+	display: inline-block;
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	position: absolute;
+}
+.cssload-dots:nth-child(1):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -1.85s;
+		-o-animation-delay: -1.85s;
+		-ms-animation-delay: -1.85s;
+		-webkit-animation-delay: -1.85s;
+		-moz-animation-delay: -1.85s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(1):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -1.85s;
+		-o-animation-delay: -1.85s;
+		-ms-animation-delay: -1.85s;
+		-webkit-animation-delay: -1.85s;
+		-moz-animation-delay: -1.85s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(2):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -3.69s;
+		-o-animation-delay: -3.69s;
+		-ms-animation-delay: -3.69s;
+		-webkit-animation-delay: -3.69s;
+		-moz-animation-delay: -3.69s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(2):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -3.69s;
+		-o-animation-delay: -3.69s;
+		-ms-animation-delay: -3.69s;
+		-webkit-animation-delay: -3.69s;
+		-moz-animation-delay: -3.69s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(3):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -5.54s;
+		-o-animation-delay: -5.54s;
+		-ms-animation-delay: -5.54s;
+		-webkit-animation-delay: -5.54s;
+		-moz-animation-delay: -5.54s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(3):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -5.54s;
+		-o-animation-delay: -5.54s;
+		-ms-animation-delay: -5.54s;
+		-webkit-animation-delay: -5.54s;
+		-moz-animation-delay: -5.54s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(4):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -7.38s;
+		-o-animation-delay: -7.38s;
+		-ms-animation-delay: -7.38s;
+		-webkit-animation-delay: -7.38s;
+		-moz-animation-delay: -7.38s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(4):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -7.38s;
+		-o-animation-delay: -7.38s;
+		-ms-animation-delay: -7.38s;
+		-webkit-animation-delay: -7.38s;
+		-moz-animation-delay: -7.38s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(5):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -9.23s;
+		-o-animation-delay: -9.23s;
+		-ms-animation-delay: -9.23s;
+		-webkit-animation-delay: -9.23s;
+		-moz-animation-delay: -9.23s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(5):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -9.23s;
+		-o-animation-delay: -9.23s;
+		-ms-animation-delay: -9.23s;
+		-webkit-animation-delay: -9.23s;
+		-moz-animation-delay: -9.23s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(6):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -11.07s;
+		-o-animation-delay: -11.07s;
+		-ms-animation-delay: -11.07s;
+		-webkit-animation-delay: -11.07s;
+		-moz-animation-delay: -11.07s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(6):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -11.07s;
+		-o-animation-delay: -11.07s;
+		-ms-animation-delay: -11.07s;
+		-webkit-animation-delay: -11.07s;
+		-moz-animation-delay: -11.07s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(7):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -12.92s;
+		-o-animation-delay: -12.92s;
+		-ms-animation-delay: -12.92s;
+		-webkit-animation-delay: -12.92s;
+		-moz-animation-delay: -12.92s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(7):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -12.92s;
+		-o-animation-delay: -12.92s;
+		-ms-animation-delay: -12.92s;
+		-webkit-animation-delay: -12.92s;
+		-moz-animation-delay: -12.92s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(8):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -14.76s;
+		-o-animation-delay: -14.76s;
+		-ms-animation-delay: -14.76s;
+		-webkit-animation-delay: -14.76s;
+		-moz-animation-delay: -14.76s;
+	background-color: rgb(47,81,81);
+}
+.cssload-dots:nth-child(8):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -14.76s;
+		-o-animation-delay: -14.76s;
+		-ms-animation-delay: -14.76s;
+		-webkit-animation-delay: -14.76s;
+		-moz-animation-delay: -14.76s;
+	background-color: rgb(119,119,119);
+}
+.cssload-dots:nth-child(9):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -16.61s;
+		-o-animation-delay: -16.61s;
+		-ms-animation-delay: -16.61s;
+		-webkit-animation-delay: -16.61s;
+		-moz-animation-delay: -16.61s;
+	background-color: #F00;
+}
+.cssload-dots:nth-child(9):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -16.61s;
+		-o-animation-delay: -16.61s;
+		-ms-animation-delay: -16.61s;
+		-webkit-animation-delay: -16.61s;
+		-moz-animation-delay: -16.61s;
+	background-color: #777;
+}
+.cssload-dots:nth-child(10):before {
+	transform: translateY(-200%);
+		-o-transform: translateY(-200%);
+		-ms-transform: translateY(-200%);
+		-webkit-transform: translateY(-200%);
+		-moz-transform: translateY(-200%);
+	animation: cssload-animBefore 2.05s linear infinite;
+		-o-animation: cssload-animBefore 2.05s linear infinite;
+		-ms-animation: cssload-animBefore 2.05s linear infinite;
+		-webkit-animation: cssload-animBefore 2.05s linear infinite;
+		-moz-animation: cssload-animBefore 2.05s linear infinite;
+	animation-delay: -18.45s;
+		-o-animation-delay: -18.45s;
+		-ms-animation-delay: -18.45s;
+		-webkit-animation-delay: -18.45s;
+		-moz-animation-delay: -18.45s;
+	background-color: #F00;
+}
+.cssload-dots:nth-child(10):after {
+	transform: translateY(200%);
+		-o-transform: translateY(200%);
+		-ms-transform: translateY(200%);
+		-webkit-transform: translateY(200%);
+		-moz-transform: translateY(200%);
+	animation: cssload-animAfter 2.05s linear infinite;
+		-o-animation: cssload-animAfter 2.05s linear infinite;
+		-ms-animation: cssload-animAfter 2.05s linear infinite;
+		-webkit-animation: cssload-animAfter 2.05s linear infinite;
+		-moz-animation: cssload-animAfter 2.05s linear infinite;
+	animation-delay: -18.45s;
+		-o-animation-delay: -18.45s;
+		-ms-animation-delay: -18.45s;
+		-webkit-animation-delay: -18.45s;
+		-moz-animation-delay: -18.45s;
+	background-color: #777;
+}
+
+
+
+
+@keyframes cssload-animBefore {
+	0% {
+		transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	25% {
+		transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	50% {
+		transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	75% {
+		transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	100% {
+		transform: scale(1) translateY(-200%);
+		z-index: -1;
+	}
+}
+
+@-o-keyframes cssload-animBefore {
+	0% {
+		-o-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	25% {
+		-o-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	50% {
+		-o-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	75% {
+		-o-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	100% {
+		-o-transform: scale(1) translateY(-200%);
+		z-index: -1;
+	}
+}
+
+@-ms-keyframes cssload-animBefore {
+	0% {
+		-ms-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	25% {
+		-ms-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	50% {
+		-ms-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	75% {
+		-ms-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	100% {
+		-ms-transform: scale(1) translateY(-200%);
+		z-index: -1;
+	}
+}
+
+@-webkit-keyframes cssload-animBefore {
+	0% {
+		-webkit-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	25% {
+		-webkit-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	50% {
+		-webkit-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	75% {
+		-webkit-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	100% {
+		-webkit-transform: scale(1) translateY(-200%);
+		z-index: -1;
+	}
+}
+
+@-moz-keyframes cssload-animBefore {
+	0% {
+		-moz-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	25% {
+		-moz-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	50% {
+		-moz-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	75% {
+		-moz-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	100% {
+		-moz-transform: scale(1) translateY(-200%);
+		z-index: -1;
+	}
+}
+
+@keyframes cssload-animAfter {
+	0% {
+		transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	25% {
+		transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	50% {
+		transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	75% {
+		transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	100% {
+		transform: scale(1) translateY(200%);
+		z-index: 1;
+	}
+}
+
+@-o-keyframes cssload-animAfter {
+	0% {
+		-o-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	25% {
+		-o-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	50% {
+		-o-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	75% {
+		-o-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	100% {
+		-o-transform: scale(1) translateY(200%);
+		z-index: 1;
+	}
+}
+
+@-ms-keyframes cssload-animAfter {
+	0% {
+		-ms-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	25% {
+		-ms-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	50% {
+		-ms-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	75% {
+		-ms-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	100% {
+		-ms-transform: scale(1) translateY(200%);
+		z-index: 1;
+	}
+}
+
+@-webkit-keyframes cssload-animAfter {
+	0% {
+		-webkit-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	25% {
+		-webkit-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	50% {
+		-webkit-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	75% {
+		-webkit-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	100% {
+		-webkit-transform: scale(1) translateY(200%);
+		z-index: 1;
+	}
+}
+
+@-moz-keyframes cssload-animAfter {
+	0% {
+		-moz-transform: scale(1) translateY(200%);
+		z-index: -1;
+	}
+	25% {
+		-moz-transform: scale(0.7) translateY(0);
+		z-index: -1;
+	}
+	50% {
+		-moz-transform: scale(1) translateY(-200%);
+		z-index: 1;
+	}
+	75% {
+		-moz-transform: scale(1.3) translateY(0);
+		z-index: 1;
+	}
+	100% {
+		-moz-transform: scale(1) translateY(200%);
+		z-index: 1;
+	}
+}
